--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,16 @@ spring:
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
-#      ddl-auto: update
+#      ddl-auto: create  #데이터 최초 상태로 초기화
+      ddl-auto: update  #데이터 유지
     properties:
       hibernate:
         show_sql: true
         format_sql: true
-    defer-datasource-initialization: true
-  sql:
-    init:
-      mode: always
+#    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
 
 springdoc:
   swagger-ui:
